--- a/config-data/user-service.yaml
+++ b/config-data/user-service.yaml
@@ -1,2 +1,9 @@
 server:
   port: 8001
+eureka:
+  client:
+  register-with-eureka: true
+  service-url:
+    default-zone: http://localhost:8761/eureka
+  instance:
+    hostname: localhost
