--- a/config-data/eureka-service.yaml
+++ b/config-data/eureka-service.yaml
@@ -1,6 +1,8 @@
 server:
-  port: 8761
+  port: 8761 # Puerto por defecto de eureka
 eureka:
   client:
-    fetch-registry: false
+    fetch-registry: false # Para indicarle que eureka no se va a registrar a si mismo
     register-with-eureka: false
+    service-url: 
+      default-zone: http://${eureka.instance.hostname}:${server.port}/eureka # Le pasamos valores
